# rpi3-sel4-test-project

./: .gitmodules  README.md
configs/: rpi3.cmake
projects/hello-world/: CMakeLists.txt
projects/hello-world/src/: main.c
scripts/: build
